--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filter-task",
+  "name": "miista",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "next": "12.2.5",
+    "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
+    "smart-array-filter": "^4.0.0",
     "swr": "^1.3.0",
     "tailwind-styled-components": "^2.1.8"
   },
